Improve rendering of last exercice

--- a/src/1925–1950_Birth_of_Innovation/the-thank-you-note.ipynb
+++ b/src/1925–1950_Birth_of_Innovation/the-thank-you-note.ipynb
@@ -6,15 +6,19 @@
    "metadata": {},
    "source": [
     "### Chiffrements par substitution (échange de lettres)\n",
-    "* Chiffre de César : Décaler chaque lettre de l'alphabet d'un nombre fixe de positions (ex: +3).\n",
-    "* Chiffre de Vigenère : Utilise un mot-clé pour appliquer des décalages différents, rendant le code plus complexe.\n",
-    "* Chiffre de Playfair : Chiffre des paires de lettres en utilisant une grille 5x5 contenant l'alphabet. \n",
-    "* Chiffrements par transposition (réorganisation des lettres)\n",
-    "* Transposition par grille : Écrire le message dans une grille, puis le lire selon un ordre spécifique (colonnes ou diagonales) défini par une clé.\n",
-    "* Chiffre de Rail Fence (en zigzag) : Écrire le texte en zigzag sur plusieurs lignes et lire les lignes une par une. \n",
+    "\n",
+    "* **Chiffre de César** : Décaler chaque lettre de l'alphabet d'un nombre fixe de positions (ex: +3).\n",
+    "* **Chiffre de Vigenère** : Utilise un mot-clé pour appliquer des décalages différents, rendant le code plus complexe.\n",
+    "* **Chiffre de Playfair** : Chiffre des paires de lettres en utilisant une grille 5×5 contenant l'alphabet.\n",
+    "\n",
+    "### Chiffrements par transposition (réorganisation des lettres)\n",
+    "\n",
+    "* **Transposition par grille** : Écrire le message dans une grille, puis le lire selon un ordre spécifique (colonnes ou diagonales) défini par une clé.\n",
+    "* **Chiffre de Rail Fence (en zigzag)** : Écrire le texte en zigzag sur plusieurs lignes et lire les lignes une par une.\n",
     "\n",
     "### Autres concepts classiques\n",
-    "* Masque jetable (One-Time Pad) : Considéré comme le seul chiffrement classique infaillible, il utilise une clé aléatoire aussi longue que le message, jamais réutilisée. "
+    "\n",
+    "* **Masque jetable (One-Time Pad)** : Considéré comme le seul chiffrement classique infaillible, il utilise une clé aléatoire aussi longue que le message, jamais réutilisée."
    ]
   },
   {
@@ -445,7 +449,7 @@
    "id": "bf1bd03e",
    "metadata": {},
    "source": [
-    "On suppose que le nom `Stoll` se cache derrière `Ffwkh`. On va coder la clé"
+    "On suppose que le nom `Zimmerei` se cache derrière `Zjqdxrfm`. On va coder la clé"
    ]
   },
   {
