making sure that the algorithme is working on example

--- a/src/1951–1975 Pneumatic Revolution/festo_european_expansion.ipynb
+++ b/src/1951–1975 Pneumatic Revolution/festo_european_expansion.ipynb
@@ -68,9 +68,321 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16b4e02",
+   "id": "56033f83",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Proposition de résolution\n",
+    "\n",
+    "- On lit la grille comme si c´était un vecteur\n",
+    "- On calcule le coût par case\n",
+    "- On détermine des arrêtes avec les 4 voisins\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c901582",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['S' '.' '.' '~' '.' '.' '.' '^' '^' '.']\n",
+      " ['.' '#' '.' '^' '.' '.' '#' '.' '.' 'G']\n",
+      " ['.' '.' '#' '.' '.' '~' '~' '.' '.' '.']\n",
+      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
+      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
+      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
+      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
+      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
+      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n",
+      "Grille dimensions: (10, 10)\n",
+      "Nombre total de cellules: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def lire_grille(fichier):\n",
+    "    with open(fichier, 'r') as f:\n",
+    "        lignes = f.readlines()\n",
+    "    return np.array([list(ligne.rstrip(\"\\n\")) for ligne in lignes])\n",
+    "\n",
+    "grille = lire_grille('res/map.txt')\n",
+    "grille = lire_grille('res/map-check.txt')\n",
+    "H, L = grille.shape\n",
+    "N = H * L\n",
+    "print(grille)\n",
+    "print(\"Grille dimensions:\", grille.shape)\n",
+    "print(\"Nombre total de cellules:\", N)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "32d0b21d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Matrice des coûts:\n",
+      "[[ 0.  1.  1.  3.  1.  1.  1.  5.  5.  1.]\n",
+      " [ 1. inf  1.  5.  1.  1. inf  1.  1.  0.]\n",
+      " [ 1.  1. inf  1.  1.  3.  3.  1.  1.  1.]\n",
+      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
+      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
+      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
+      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
+      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
+      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]]\n",
+      "\n",
+      "Masque de practicabilité:\n",
+      "[[ True  True  True  True  True  True  True  True  True  True]\n",
+      " [ True False  True  True  True  True False  True  True  True]\n",
+      " [ True  True False  True  True  True  True  True  True  True]\n",
+      " [ True  True False  True  True False  True  True  True  True]\n",
+      " [ True  True False  True  True False  True  True  True  True]\n",
+      " [ True  True False  True  True False  True  True  True  True]\n",
+      " [ True  True False  True  True False  True  True  True  True]\n",
+      " [ True  True False  True  True False  True  True  True  True]\n",
+      " [ True  True False  True  True False  True  True  True  True]\n",
+      " [ True  True  True  True  True  True  True  True  True  True]]\n",
+      "\n",
+      "Indexes des cellules:\n",
+      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]\n",
+      " [20 21 22 23 24 25 26 27 28 29]\n",
+      " [30 31 32 33 34 35 36 37 38 39]\n",
+      " [40 41 42 43 44 45 46 47 48 49]\n",
+      " [50 51 52 53 54 55 56 57 58 59]\n",
+      " [60 61 62 63 64 65 66 67 68 69]\n",
+      " [70 71 72 73 74 75 76 77 78 79]\n",
+      " [80 81 82 83 84 85 86 87 88 89]\n",
+      " [90 91 92 93 94 95 96 97 98 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialisation de la matrice de coûts\n",
+    "cout = np.full((H, L), np.inf, dtype=np.float32)\n",
+    "# Allocation des coûts par slicing\n",
+    "cout[grille == '.'] = 1 # Autoroute\n",
+    "cout[grille == '~'] = 3 # Route réginonale accidentée\n",
+    "cout[grille == \"^\"] = 5 # Montagne\n",
+    "cout[(grille == \"S\") | (grille == \"G\")] = 0 # Départ et arrivée\n",
+    "print(\"\\nMatrice des coûts:\")\n",
+    "print(cout)\n",
+    "\n",
+    "# Masque indiquant la practicabilité du chemin\n",
+    "franchissable = np.isfinite(cout)\n",
+    "print(\"\\nMasque de practicabilité:\")\n",
+    "print(franchissable)\n",
+    "\n",
+    "# Définition des indexes\n",
+    "indexes = np.arange(N).reshape(H, L)\n",
+    "print(\"\\nIndexes des cellules:\")\n",
+    "print(indexes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "868c370a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False,  True,  True,  True,  True, False,  True,\n",
+       "        True,  True,  True,  True, False,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True, False,  True,  True, False,\n",
+       "        True,  True,  True,  True,  True,  True, False,  True,  True,\n",
+       "       False,  True,  True,  True,  True,  True,  True, False,  True,\n",
+       "        True, False,  True,  True,  True,  True,  True,  True, False,\n",
+       "        True,  True, False,  True,  True,  True,  True,  True,  True,\n",
+       "       False,  True,  True, False,  True,  True,  True,  True,  True,\n",
+       "        True, False,  True,  True, False,  True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "franchissable.ravel()[indexes[:-1, :].ravel()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9570d56e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+       "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
+       "       51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,\n",
+       "       68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,\n",
+       "       85, 86, 87, 88, 89])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indexes[:-1, :].ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2603e473",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Compressed Sparse Row sparse matrix of dtype 'float32'\n",
+       "\twith 262 stored elements and shape (100, 100)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calcule des arrêtes\n",
+    "from typing import Tuple\n",
+    "\n",
+    "from scipy import sparse\n",
+    "\n",
+    "\n",
+    "def arretes(arretes_depart: np.ndarray, arretes_arrivee: np.ndarray) -> Tuple[np.ndarray, np.ndarray, np.ndarray]:\n",
+    "    \"\"\"\n",
+    "    Génère les arrêtes entre deux côtés adjacents de la grille.\n",
+    "    Args:\n",
+    "        arretes_depart (np.ndarray): Indexes des cellules de départ.\n",
+    "        arretes_arrivee (np.ndarray): Indexes des cellules d'arrivée.\n",
+    "    Returns:\n",
+    "        Tuple[np.ndarray, np.ndarray, np.ndarray]: Trois tableaux contenant les indexes des cellules de départ, \n",
+    "        les indexes des cellules d'arrivée, et les coûts associés aux cellules d'arrivée.\n",
+    "    \"\"\"\n",
+    "    depart = arretes_depart.ravel()\n",
+    "    arrivee = arretes_arrivee.ravel()\n",
+    "    # Filtrage des franchissements valides, c´est-à-dire franchissables au départ et à l'arrivée\n",
+    "    m = franchissable.ravel()[depart] & franchissable.ravel()[arrivee]  \n",
+    "\n",
+    "    return depart[m], arrivee[m], cout.ravel()[arrivee[m]]\n",
+    "\n",
+    "\n",
+    "# Réalisation des calculs pour les voisins verticaux\n",
+    "dep_bas, arr_bas, cout_bas = arretes(indexes[:-1, :], indexes[1:, :])  # voisins du bas\n",
+    "dep_haut, arr_haut, cout_haut = arretes(indexes[1:, :], indexes[:-1, :])  # voisins du haut\n",
+    "\n",
+    "# Réalisation des calculs pour les voisins horizontaux\n",
+    "dep_droite, arr_droite, cout_droite = arretes(indexes[:, :-1], indexes[:, 1:])  # voisins de droite\n",
+    "dep_gauche, arr_gauche, cout_gauche = arretes(indexes[:, 1:], indexes[:, :-1])  # voisins de gauche\n",
+    "\n",
+    "lignes = np.concatenate([dep_bas, dep_haut, dep_droite, dep_gauche])\n",
+    "colonnes = np.concatenate([arr_bas, arr_haut, arr_droite, arr_gauche])\n",
+    "couts = np.concatenate([cout_bas, cout_haut, cout_droite, cout_gauche])\n",
+    "\n",
+    "G = sparse.csr_matrix((couts, (lignes, colonnes)), shape=(N, N))\n",
+    "G\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "757ffcab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index de départ (S): 0\n",
+      "Index de destination (G): 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definition de l´origine et de la destination\n",
+    "s = int(np.flatnonzero((grille == 'S').ravel())[0])\n",
+    "g = int(np.flatnonzero((grille == 'G').ravel())[0])\n",
+    "\n",
+    "print(\"Index de départ (S):\", s)\n",
+    "print(\"Index de destination (G):\", g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5f036cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coût du meilleur chemin de S à G: 15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcul du chemin le plus court\n",
+    "\n",
+    "from scipy.sparse import csgraph\n",
+    "distance, predecessors = csgraph.dijkstra(G, directed=True, indices=s, return_predecessors=True)\n",
+    "meilleur_cout = distance[g]\n",
+    "print(\"Coût du meilleur chemin de S à G:\", meilleur_cout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "84ce9c50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chemin optimal de S à G  -->  S..~...^..G\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reconstruction du chemin optimal\n",
+    "chemin = []\n",
+    "position_actuelle = g\n",
+    "\n",
+    "while position_actuelle != s:\n",
+    "    chemin.append(position_actuelle)\n",
+    "    position_actuelle = predecessors[position_actuelle]\n",
+    "chemin.append(s)\n",
+    "chemin.reverse()\n",
+    "\n",
+    "# Conversion des indexes en succession des symboles de la grille\n",
+    "chemin_symboles = ''.join([grille[divmod(int(index), L)] for index in chemin])\n",
+    "print(\"Chemin optimal de S à G  --> \", chemin_symboles)"
+   ]
   }
  ],
  "metadata": {
@@ -80,7 +392,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
