--- a/src/1951–1975 Pneumatic Revolution/festo_european_expansion.ipynb
+++ b/src/1951–1975 Pneumatic Revolution/festo_european_expansion.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5c901582",
    "metadata": {},
    "outputs": [
@@ -88,18 +88,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['S' '.' '.' '~' '.' '.' '.' '^' '^' '.']\n",
-      " ['.' '#' '.' '^' '.' '.' '#' '.' '.' 'G']\n",
-      " ['.' '.' '#' '.' '.' '~' '~' '.' '.' '.']\n",
-      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '#' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n",
-      "Grille dimensions: (10, 10)\n",
-      "Nombre total de cellules: 100\n"
+      "[['S' '.' '~' ... '.' '^' '.']\n",
+      " ['.' '.' '#' ... '.' '.' '~']\n",
+      " ['.' '~' '.' ... '.' '~' '.']\n",
+      " ...\n",
+      " ['.' '.' '~' ... '^' '~' '.']\n",
+      " ['.' '~' '.' ... '#' '.' '.']\n",
+      " ['.' '.' '^' ... '.' 'G' '.']]\n",
+      "Grille dimensions: (38, 40)\n",
+      "Nombre total de cellules: 1520\n"
      ]
     }
    ],
@@ -113,7 +110,6 @@
     "    return np.array([list(ligne.rstrip(\"\\n\")) for ligne in lignes])\n",
     "\n",
     "grille = lire_grille('res/map.txt')\n",
-    "grille = lire_grille('res/map-check.txt')\n",
     "H, L = grille.shape\n",
     "N = H * L\n",
     "print(grille)\n",
@@ -123,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "32d0b21d",
    "metadata": {},
    "outputs": [
@@ -133,40 +129,31 @@
      "text": [
       "\n",
       "Matrice des coûts:\n",
-      "[[ 0.  1.  1.  3.  1.  1.  1.  5.  5.  1.]\n",
-      " [ 1. inf  1.  5.  1.  1. inf  1.  1.  0.]\n",
-      " [ 1.  1. inf  1.  1.  3.  3.  1.  1.  1.]\n",
-      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
-      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
-      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
-      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
-      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
-      " [ 1.  1. inf  1.  1. inf  1.  1.  1.  1.]\n",
-      " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]]\n",
+      "[[ 0.  1.  3. ...  1.  5.  1.]\n",
+      " [ 1.  1. inf ...  1.  1.  3.]\n",
+      " [ 1.  3.  1. ...  1.  3.  1.]\n",
+      " ...\n",
+      " [ 1.  1.  3. ...  5.  3.  1.]\n",
+      " [ 1.  3.  1. ... inf  1.  1.]\n",
+      " [ 1.  1.  5. ...  1.  0.  1.]]\n",
       "\n",
       "Masque de practicabilité:\n",
-      "[[ True  True  True  True  True  True  True  True  True  True]\n",
-      " [ True False  True  True  True  True False  True  True  True]\n",
-      " [ True  True False  True  True  True  True  True  True  True]\n",
-      " [ True  True False  True  True False  True  True  True  True]\n",
-      " [ True  True False  True  True False  True  True  True  True]\n",
-      " [ True  True False  True  True False  True  True  True  True]\n",
-      " [ True  True False  True  True False  True  True  True  True]\n",
-      " [ True  True False  True  True False  True  True  True  True]\n",
-      " [ True  True False  True  True False  True  True  True  True]\n",
-      " [ True  True  True  True  True  True  True  True  True  True]]\n",
+      "[[ True  True  True ...  True  True  True]\n",
+      " [ True  True False ...  True  True  True]\n",
+      " [ True  True  True ...  True  True  True]\n",
+      " ...\n",
+      " [ True  True  True ...  True  True  True]\n",
+      " [ True  True  True ... False  True  True]\n",
+      " [ True  True  True ...  True  True  True]]\n",
       "\n",
       "Indexes des cellules:\n",
-      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
-      " [10 11 12 13 14 15 16 17 18 19]\n",
-      " [20 21 22 23 24 25 26 27 28 29]\n",
-      " [30 31 32 33 34 35 36 37 38 39]\n",
-      " [40 41 42 43 44 45 46 47 48 49]\n",
-      " [50 51 52 53 54 55 56 57 58 59]\n",
-      " [60 61 62 63 64 65 66 67 68 69]\n",
-      " [70 71 72 73 74 75 76 77 78 79]\n",
-      " [80 81 82 83 84 85 86 87 88 89]\n",
-      " [90 91 92 93 94 95 96 97 98 99]]\n"
+      "[[   0    1    2 ...   37   38   39]\n",
+      " [  40   41   42 ...   77   78   79]\n",
+      " [  80   81   82 ...  117  118  119]\n",
+      " ...\n",
+      " [1400 1401 1402 ... 1437 1438 1439]\n",
+      " [1440 1441 1442 ... 1477 1478 1479]\n",
+      " [1480 1481 1482 ... 1517 1518 1519]]\n"
      ]
     }
    ],
@@ -194,26 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "868c370a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True, False,  True,  True,  True,  True, False,  True,\n",
-       "        True,  True,  True,  True, False,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True, False,  True,  True, False,\n",
-       "        True,  True,  True,  True,  True,  True, False,  True,  True,\n",
-       "       False,  True,  True,  True,  True,  True,  True, False,  True,\n",
-       "        True, False,  True,  True,  True,  True,  True,  True, False,\n",
-       "        True,  True, False,  True,  True,  True,  True,  True,  True,\n",
-       "       False,  True,  True, False,  True,  True,  True,  True,  True,\n",
-       "        True, False,  True,  True, False,  True,  True,  True,  True])"
+       "array([ True,  True,  True, ..., False,  True,  True], shape=(1480,))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,22 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "9570d56e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
-       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
-       "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
-       "       51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,\n",
-       "       68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,\n",
-       "       85, 86, 87, 88, 89])"
+       "array([   0,    1,    2, ..., 1477, 1478, 1479], shape=(1480,))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "2603e473",
    "metadata": {},
    "outputs": [
@@ -258,10 +231,10 @@
      "data": {
       "text/plain": [
        "<Compressed Sparse Row sparse matrix of dtype 'float32'\n",
-       "\twith 262 stored elements and shape (100, 100)>"
+       "\twith 4992 stored elements and shape (1520, 1520)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "757ffcab",
    "metadata": {},
    "outputs": [
@@ -318,7 +291,7 @@
      "output_type": "stream",
      "text": [
       "Index de départ (S): 0\n",
-      "Index de destination (G): 19\n"
+      "Index de destination (G): 1518\n"
      ]
     }
    ],
@@ -333,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "5f036cf6",
    "metadata": {},
    "outputs": [
@@ -341,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coût du meilleur chemin de S à G: 15.0\n"
+      "Coût du meilleur chemin de S à G: 102.0\n"
      ]
     }
    ],
@@ -356,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "84ce9c50",
    "metadata": {},
    "outputs": [
@@ -364,7 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chemin optimal de S à G  -->  S..~...^..G\n"
+      "Chemin optimal de S à G  -->  S............~....~.....~......~..~........~.....~......~..~........~..^^..G\n"
      ]
     }
    ],
