Find solution to the problem restoring the scheduler

--- a/src/1976–2000 Digital Dreams/restoring_the_scheduler.ipynb
+++ b/src/1976–2000 Digital Dreams/restoring_the_scheduler.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "6420d106",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de lignes après 'Synchronised.': 41\n",
-      "Nombre de lignes après filtrage des messages reçus: 32\n"
+      "Nombre de lignes après 'Synchronised.': 41\n"
      ]
     }
    ],
@@ -40,8 +39,7 @@
     "print(f\"Nombre de lignes après 'Synchronised.': {len(data)}\")\n",
     "\n",
     "# Filtrons les lignes ne contenant que 'RECV MSG: 0x'\n",
-    "messages_recus = list(filter(lambda line: all(['RECV MSG: 0x' in line, 'duplicate' not in line, 'resend' not in line]), data))\n",
-    "print(f\"Nombre de lignes après filtrage des messages reçus: {len(messages_recus)}\")"
+    "messages_recus = list(filter(lambda line: all(['RECV MSG: 0x' in line, 'duplicate' not in line, 'resend' not in line]), data))"
    ]
   },
   {
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "35c58ff6",
    "metadata": {},
    "outputs": [
@@ -62,21 +60,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de messages après exclusion des timestamps 0x1FFF: 28\n"
+      "Nombre de messages corrompus après exclusion des timestamps 0x1FFF: 28\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "from datetime import datetime\n",
     "\n",
     "\n",
     "class Message:\n",
+    "\n",
+    "    counter = 1\n",
+    "\n",
     "    def __init__(self, message: str) -> None:\n",
     "        self._message = message\n",
     "        self.date, self.header = self.decrypte_hex_line(message)\n",
     "        self.binary_header = format(int(self.header, 16), '032b')\n",
+    "        self.index = Message.counter\n",
+    "        Message.counter += 1\n",
     "\n",
     "    def decrypte_hex_line(self, line: str) -> tuple[datetime, str]:\n",
     "        date, _, _, hex_header = tuple(filter(None, line.strip().split(' ')))\n",
@@ -98,14 +99,53 @@
     "    def payload(self) -> str:\n",
     "        return self.binary_header[:-20]\n",
     "    \n",
-    "def convert_32bit_to_hex(bits) -> str:\n",
-    "    return hex(int(bits, 2))\n",
+    "    @property\n",
+    "    def priority_value(self) -> int:\n",
+    "        return int(self.priority, 2)\n",
+    "\n",
+    "    @property\n",
+    "    def timestamp_value(self) -> int:\n",
+    "        return int(self.timestamp, 2)\n",
+    "\n",
+    "    @property\n",
+    "    def aging_factor_value(self) -> int:\n",
+    "        return int(self.aging_factor, 2)\n",
+    "    \n",
+    "    @property\n",
+    "    def message(self) -> str:\n",
+    "        return self._message\n",
+    "    \n",
+    "    @message.setter\n",
+    "    def message(self, new_hex_message: str) -> None:\n",
+    "        self._message = new_hex_message\n",
+    "        self.binary_header = format(int(new_hex_message, 16), '032b')\n",
+    "\n",
+    "    def __lt__(self, other: 'Message') -> bool:\n",
+    "        if not isinstance(other, Message):\n",
+    "            return NotImplemented\n",
+    "        # Comparateur: priorité (asc), timestamp (asc), aging factor (desc), puis date pour stabilité\n",
+    "        if self.priority_value != other.priority_value:\n",
+    "            return self.priority_value < other.priority_value\n",
+    "        if self.timestamp_value != other.timestamp_value:\n",
+    "            return self.timestamp_value < other.timestamp_value\n",
+    "        if self.aging_factor_value != other.aging_factor_value:\n",
+    "            return self.aging_factor_value > other.aging_factor_value\n",
+    "        return self.date < other.date\n",
+    "    \n",
+    "\n",
+    "def exclus_timestamp_1fff(message: Message):\n",
+    "    def convert_32bit_to_hex(bits) -> str:\n",
+    "        return hex(int(bits, 2))\n",
+    "    \n",
+    "    if convert_32bit_to_hex(message.timestamp) != '0x1fff':\n",
+    "        return message\n",
+    "    return None\n",
     "    \n",
     "    \n",
-    "decoded_messages = [Message(line) for line in messages_recus]\n",
+    "corrupted_messages = [Message(line) for line in messages_recus]\n",
     "# Excluons les messages avec un timestamp 0x1FFF\n",
-    "decoded_messages = [msg for msg in decoded_messages if convert_32bit_to_hex(msg.timestamp) != '0x1fff']\n",
-    "print(f\"Nombre de messages après exclusion des timestamps 0x1FFF: {len(decoded_messages)}\")\n"
+    "corrupted_messages = list(filter(None, map(exclus_timestamp_1fff, corrupted_messages)))\n",
+    "print(f\"Nombre de messages corrompus après exclusion des timestamps 0x1FFF: {len(corrupted_messages)}\")"
    ]
   },
   {
@@ -118,8 +158,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "f6abbdef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 premiers messages réparés:\n",
+      "09:16:25 RECV MSG: 0x84960A5E\n",
+      "\n",
+      "09:16:29 RECV MSG: 0xF4064DA7\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Isolons les 20 premiers bits des messages corrompus\n",
+    "\n",
+    "def repair_corrupted_headers(message: Message) -> Message:\n",
+    "    # Seuls les messages 25 à 28 (ordre d'arrivée) sont corrompus\n",
+    "    if 25 <= message.index <= 28:\n",
+    "        # Récupère la valeur entière du header sur 32 bits\n",
+    "        header_int = int(message.header, 16)\n",
+    "        lower_20 = header_int & 0xFFFFF  # bits 0-19\n",
+    "\n",
+    "        def rotation_droite_20b(value: int, n: int) -> int:\n",
+    "            \"\"\"Rotation circulaire à droite sur 20 bits\"\"\"\n",
+    "            return ((value >> n) | (value << (20 - n))) & 0xFFFFF\n",
+    "\n",
+    "        rotated_20 = rotation_droite_20b(lower_20, 2)  # inverse la rotation gauche de 2\n",
+    "        repaired_int = (header_int & ~0xFFFFF) | rotated_20\n",
+    "        repaired_header_hex = format(repaired_int, '08x')\n",
+    "\n",
+    "        # Mise à jour du message (recalcule binary_header)\n",
+    "        message.message = repaired_header_hex\n",
+    "\n",
+    "    return message\n",
+    "\n",
+    "\n",
+    "repaired_messages = list(map(repair_corrupted_headers, corrupted_messages))\n",
+    "print(\"2 premiers messages réparés:\")\n",
+    "print(repaired_messages[0].message)\n",
+    "print(repaired_messages[1].message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb0de3e",
+   "metadata": {},
+   "source": [
+    "### 4. Sort the queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "472bf5a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 premiers messages triés (header hex):\n",
+      "3fb106d0\n",
+      "09:16:57 RECV MSG: 0xCC3017E0\n",
+      "\n",
+      "09:17:01 RECV MSG: 0x7CE75548\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tri des messages réparés selon priorité asc, timestamp asc, aging factor desc\n",
+    "sorted_messages = sorted(repaired_messages)\n",
+    "print(\"3 premiers messages triés (header hex):\")\n",
+    "for msg in sorted_messages[:3]:\n",
+    "    print(msg.message)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b5058c4",
+   "metadata": {},
+   "source": [
+    "### 5. Produce the key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d8efd60b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clé reconstituée (28 messages): 25-9-10-13-15-14-23-20-5-18-26-12-28-16-4-21-22-27-11-17-7-3-6-1-19-24-2-8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Produce the key\n",
+    "# Les messages triés sont dans sorted_messages et portent leur index d'arrivée (01..32)\n",
+    "original_indices = [f\"{msg.index}\" for msg in sorted_messages]\n",
+    "key = \"-\".join(original_indices)\n",
+    "print(f\"Clé reconstituée ({len(original_indices)} messages): {key}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82ddf272",
    "metadata": {},
    "outputs": [],
    "source": []
