--- a/src/2001-2025 Age of Connectivity/the-bionic-awakening.ipynb
+++ b/src/2001-2025 Age of Connectivity/the-bionic-awakening.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Pneumon étend ses tentacules lumineuses et projette une grille de lumière sous vos pieds.\n",
     "\n",
-    "> « Leur logique de vol s'est fracturée en trois couches neuronales :\n",
+    "> « Leur logique de vol s'est fractionné en trois couches neuronales :\n",
     "> - la stabilité\n",
     "> - l'adaptation\n",
     "> - la synchronisation\n",
