Initial version for solving the problem

--- a/src/2001-2025 Age of Connectivity/the-bionic-awakening.ipynb
+++ b/src/2001-2025 Age of Connectivity/the-bionic-awakening.ipynb
@@ -204,15 +204,334 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d16af2cb",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "68949e40",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIRECTIONS = {\n",
+    "    \"N\" : (-1, 0),\n",
+    "    \"S\" : (1, 0),\n",
+    "    \"E\" : (0, 1),\n",
+    "    \"W\" : (0, -1)\n",
+    "}\n",
+    "\n",
+    "def trouver_position(grille, ch):\n",
+    "    for l, ligne in enumerate(grille):\n",
+    "        c = ligne.find(ch)\n",
+    "        if c != -1:\n",
+    "            return (l, c)\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7870267",
+   "metadata": {},
+   "source": [
+    "### Resolution du problème"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e3e84b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monde chargé: 3 cartes, 11 tuiles, 3 agents.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chargement du \"monde\"\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "data = json.loads(Path(\"res/world-model.json\").read_text(encoding=\"utf-8\"))\n",
+    "\n",
+    "maps = data[\"maps\"]\n",
+    "tiles = data[\"tiles\"]\n",
+    "agents = data[\"agents\"]\n",
+    "limits = data[\"limits\"]\n",
+    "\n",
+    "overall_limit_ms = int(limits[\"overall_seconds\"] * 1000)\n",
+    "\n",
+    "print(f\"Monde chargé: {len(maps)} cartes, {len(tiles)} tuiles, {len(agents)} agents.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "881fe7e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définition de la fonction \"coût d´un pas\" par agent\n",
+    "def cout_pas_ms(agent, map_key, tile_char):\n",
+    "    tile_info = tiles[tile_char]\n",
+    "\n",
+    "    # Energie de base\n",
+    "    cout_energie = tile_info.get('energy', 0)\n",
+    "\n",
+    "    # Modifie l´énergie de l´agent\n",
+    "    e_override = agent.get(\"perks\", {}).get(\"energy_override\", {})\n",
+    "    if tile_char in e_override:\n",
+    "        cout_energie = e_override[tile_char]\n",
+    "\n",
+    "    # Multiplicateur du terrain\n",
+    "    mult_terrain = tile_info.get(\"time_mult\", 1.0)\n",
+    "    # Override temps\n",
+    "    t_override = agent.get(\"perks\", {}).get(\"time_mult_overrides\", {})\n",
+    "    if tile_char in t_override:\n",
+    "        mult_terrain = t_override[tile_char]\n",
+    "\n",
+    "    _b = agent[\"base_step_time\"][map_key]\n",
+    "\n",
+    "    conveyor_factor = tile_info.get(\"conveyor_time_factor\", 1.0)\n",
+    "    temps_s = _b * mult_terrain * conveyor_factor\n",
+    "\n",
+    "    # Pénalité recharge\n",
+    "    if \"time_penalty\" in tile_info:\n",
+    "        temps_s += float(tile_info[\"time_penalty\"])\n",
+    "        # Retour en ms et énergie en int\n",
+    "        return int(cout_energie), int(round(temps_s * 1000))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4cad57d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recherche du plus court chemin\n",
+    "import heapq\n",
+    "\n",
+    "\n",
+    "def dijkstra_one_map(map_idx, agent, require_key_from_prev_map=False):\n",
+    "    m = maps[map_idx]\n",
+    "    grid = m[\"grid\"]\n",
+    "    map_key = chr(ord(\"A\") + map_idx)  # \"A\", \"B\", \"C\"\n",
+    "    per_map_limit_ms = int(limits[\"per_map_seconds\"][map_key] * 1000)\n",
+    "\n",
+    "    start = trouver_position(grid, \"S\")\n",
+    "    goal  = trouver_position(grid, \"X\")\n",
+    "    has_key_in_this_map = False\n",
+    "\n",
+    "    # Sur la Map B, X est bloqué tant que K n'est pas ramassée.\n",
+    "    # Sur la Map C, X est bloqué si on n'a pas eu la clé de la Map B (carry).\n",
+    "    is_map_b = (map_key == \"B\")\n",
+    "    is_map_c = (map_key == \"C\")\n",
+    "    map_requires_key_mech = bool(m[\"rules\"].get(\"has_key\", False))\n",
+    "\n",
+    "    # énergie initiale de cette map\n",
+    "    energy0 = int(agent[\"battery\"][map_key])\n",
+    "\n",
+    "    # dist[(pos, have_key)] = (time_ms, energy, path)\n",
+    "    # On minimise time, et à temps égal on préfère plus d'énergie\n",
+    "    dist = {(start, False): (0, energy0, \"\")}\n",
+    "    heap = [(0, -energy0, start, False, \"\")]  # (time, -energy, pos, have_key, path)\n",
+    "    \n",
+    "    popped = 0\n",
+    "\n",
+    "    while heap:\n",
+    "        t_ms, neg_e, pos, have_key, path = heapq.heappop(heap)\n",
+    "        popped += 1\n",
+    "\n",
+    "        # si on a déjà mieux en stock, on skip\n",
+    "        if dist.get((pos, have_key)) != (t_ms, -neg_e, path):\n",
+    "            continue\n",
+    "\n",
+    "        # condition d'arrivée\n",
+    "        if pos == goal:\n",
+    "            if map_requires_key_mech and not have_key:\n",
+    "                # On est sur X mais sans clé sur Map B : pas acceptable\n",
+    "                pass\n",
+    "            else:\n",
+    "                return (t_ms, -neg_e, path, have_key)\n",
+    "\n",
+    "        r, c = pos\n",
+    "        for move, (dr, dc) in DIRECTIONS.items():\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            tile = grid[nr][nc]\n",
+    "\n",
+    "            # mur ?\n",
+    "            if not tiles.get(tile, {}).get(\"passable\", True) and tile != \"X\":\n",
+    "                continue\n",
+    "            if tile == \"#\":\n",
+    "                continue\n",
+    "\n",
+    "            # logique de verrouillage\n",
+    "            if is_map_b and tile == \"X\" and not have_key:\n",
+    "                continue\n",
+    "            if is_map_c and tile == \"X\" and not require_key_from_prev_map:\n",
+    "                continue\n",
+    "\n",
+    "            e_cost, dt_ms = cout_pas_ms(agent, map_key, tile)\n",
+    "\n",
+    "            new_e = (-neg_e) - e_cost\n",
+    "            # recharge\n",
+    "            if \"recharge\" in tiles[tile]:\n",
+    "                new_e += int(tiles[tile][\"recharge\"])\n",
+    "\n",
+    "            if new_e < 0:\n",
+    "                continue\n",
+    "\n",
+    "            new_t = t_ms + dt_ms\n",
+    "            if new_t > per_map_limit_ms:\n",
+    "                continue\n",
+    "\n",
+    "            new_have_key = have_key or tiles[tile].get(\"pickup_key\", False)\n",
+    "            new_path = path + move\n",
+    "            state = ((nr, nc), new_have_key)\n",
+    "\n",
+    "            best = dist.get(state)\n",
+    "            cand = (new_t, new_e, new_path)\n",
+    "\n",
+    "            if best is None or (new_t < best[0]) or (new_t == best[0] and new_e > best[1]):\n",
+    "                dist[state] = cand\n",
+    "                heapq.heappush(heap, (new_t, -new_e, (nr, nc), new_have_key, new_path))\n",
+    "\n",
+    "        # petit debug \"humain\" (tu peux commenter)\n",
+    "        if popped in (2000, 5000, 10000):\n",
+    "            print(f\"[debug] {agent['name']} Map {map_key}: {popped} états explorés...\")\n",
+    "\n",
+    "    return # Rien trouvé"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7783a445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resoudre_pour_agent(agent):\n",
+    "    A = dijkstra_one_map(0, agent, require_key_from_prev_map=False)\n",
+    "    if A is None:\n",
+    "        print(f\"Pas de solution pour {agent['name']} sur la Map A\")\n",
+    "        return None\n",
+    "    \n",
+    "    B = dijkstra_one_map(1, agent, require_key_from_prev_map=False)\n",
+    "    if B is None:\n",
+    "        print(f\"Pas de solution pour {agent['name']} sur la Map B\")\n",
+    "        return None\n",
+    "    \n",
+    "    key_from_B = bool(B[3])\n",
+    "    C = dijkstra_one_map(2, agent, require_key_from_prev_map=key_from_B)\n",
+    "    if C is None:\n",
+    "        print(f\"Pas de solution pour {agent['name']} sur la Map C\")\n",
+    "        return None\n",
+    "    \n",
+    "    temps_total = A[0] + B[0] + C[0]\n",
+    "    chemin_total = A[2] + B[2] + C[2]\n",
+    "    return {\n",
+    "        \"agent\": agent[\"name\"],\n",
+    "        \"temps_ms\": temps_total,\n",
+    "        \"A\": A, \"B\": B, \"C\": C,\n",
+    "        \"chemin\": chemin_total\n",
+    "\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d1b0cf56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[+] Tentative avec BionicOpter...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m agent \u001b[38;5;129;01min\u001b[39;00m agents:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m[+] Tentative avec \u001b[39m\u001b[38;5;132;01m{\u001b[39;00magent[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     sol = \u001b[43mresoudre_pour_agent\u001b[49m\u001b[43m(\u001b[49m\u001b[43magent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m sol \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m      6\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m    -> échec (pas de chemin ou contraintes trop strictes)\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mresoudre_pour_agent\u001b[39m\u001b[34m(agent)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresoudre_pour_agent\u001b[39m(agent):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     A = \u001b[43mdijkstra_one_map\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrequire_key_from_prev_map\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m A \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m      4\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPas de solution pour \u001b[39m\u001b[38;5;132;01m{\u001b[39;00magent[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m sur la Map A\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 64\u001b[39m, in \u001b[36mdijkstra_one_map\u001b[39m\u001b[34m(map_idx, agent, require_key_from_prev_map)\u001b[39m\n\u001b[32m     61\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_map_c \u001b[38;5;129;01mand\u001b[39;00m tile == \u001b[33m\"\u001b[39m\u001b[33mX\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m require_key_from_prev_map:\n\u001b[32m     62\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m e_cost, dt_ms = cout_pas_ms(agent, map_key, tile)\n\u001b[32m     66\u001b[39m new_e = (-neg_e) - e_cost\n\u001b[32m     67\u001b[39m \u001b[38;5;66;03m# recharge\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
+   "source": [
+    "solutions = []\n",
+    "for agent in agents:\n",
+    "    print(f\"\\n[+] Tentative avec {agent['name']}...\")\n",
+    "    sol = resoudre_pour_agent(agent)\n",
+    "    if sol is None:\n",
+    "        print(\"    -> échec (pas de chemin ou contraintes trop strictes)\")\n",
+    "        continue\n",
+    "    if sol[\"temps_ms\"] <= overall_limit_ms:\n",
+    "        print(f\"    -> OK ! total = {sol['temps_ms'] / 1000:.3f}s (<= {limits['overall_seconds']}s)\")\n",
+    "    else:\n",
+    "        print(f\"    -> chemin trouvé mais trop lent: {sol['temps_ms'] / 1000:.3f}s (> {limits['overall_seconds']}s)\")\n",
+    "    solutions.append(sol)\n",
+    "\n",
+    "# garde seulement celles qui respectent 36s\n",
+    "valid = [s for s in solutions if s[\"temps_ms\"] <= overall_limit_ms]\n",
+    "if not valid:\n",
+    "    print(\"\\n[-] Aucune solution ne respecte la limite globale. (Bizarre… vérifie les règles / JSON)\")\n",
+    "    return\n",
+    "\n",
+    "best = min(valid, key=lambda s: s[\"temps_ms\"])\n",
+    "\n",
+    "print(\"\\n==============================\")\n",
+    "print(\"MEILLEURE SOLUTION VALIDE\")\n",
+    "print(\"==============================\")\n",
+    "print(\"Agent :\", best[\"agent\"])\n",
+    "print(f\"Temps total : {best['total_s']:.3f}s\")\n",
+    "print(\"Chemin combiné (A+B+C) :\")\n",
+    "print(best[\"path\"])\n",
+    "\n",
+    "# Si tu veux aussi les segments :\n",
+    "print(\"\\n--- Segments ---\")\n",
+    "print(\"Map A:\", best[\"A\"][2])\n",
+    "print(\"Map B:\", best[\"B\"][2])\n",
+    "print(\"Map C:\", best[\"C\"][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "087854af",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "festo-challenge",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
