--- a/src/2001-2025 Age of Connectivity/the-bionic-awakening.ipynb
+++ b/src/2001-2025 Age of Connectivity/the-bionic-awakening.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "881fe7e9",
    "metadata": {},
    "outputs": [],
@@ -299,14 +299,15 @@
     "    # Pénalité recharge\n",
     "    if \"time_penalty\" in tile_info:\n",
     "        temps_s += float(tile_info[\"time_penalty\"])\n",
-    "        # Retour en ms et énergie en int\n",
-    "        return int(cout_energie), int(round(temps_s * 1000))\n",
+    "        \n",
+    "    # Retour en ms et énergie en int\n",
+    "    return int(cout_energie), int(round(temps_s * 1000))\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "4cad57d0",
    "metadata": {},
    "outputs": [],
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "d1b0cf56",
    "metadata": {},
    "outputs": [
@@ -452,24 +453,34 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[+] Tentative avec BionicOpter...\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m agent \u001b[38;5;129;01min\u001b[39;00m agents:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m[+] Tentative avec \u001b[39m\u001b[38;5;132;01m{\u001b[39;00magent[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     sol = \u001b[43mresoudre_pour_agent\u001b[49m\u001b[43m(\u001b[49m\u001b[43magent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m sol \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m      6\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m    -> échec (pas de chemin ou contraintes trop strictes)\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mresoudre_pour_agent\u001b[39m\u001b[34m(agent)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresoudre_pour_agent\u001b[39m(agent):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     A = \u001b[43mdijkstra_one_map\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrequire_key_from_prev_map\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m A \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m      4\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPas de solution pour \u001b[39m\u001b[38;5;132;01m{\u001b[39;00magent[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m sur la Map A\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 64\u001b[39m, in \u001b[36mdijkstra_one_map\u001b[39m\u001b[34m(map_idx, agent, require_key_from_prev_map)\u001b[39m\n\u001b[32m     61\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_map_c \u001b[38;5;129;01mand\u001b[39;00m tile == \u001b[33m\"\u001b[39m\u001b[33mX\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m require_key_from_prev_map:\n\u001b[32m     62\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m e_cost, dt_ms = cout_pas_ms(agent, map_key, tile)\n\u001b[32m     66\u001b[39m new_e = (-neg_e) - e_cost\n\u001b[32m     67\u001b[39m \u001b[38;5;66;03m# recharge\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable NoneType object"
+      "[+] Tentative avec BionicOpter...\n",
+      "    -> OK ! total = 35.702s (<= 36s)\n",
+      "\n",
+      "[+] Tentative avec BionicSwift...\n",
+      "    -> chemin trouvé mais trop lent: 39.355s (> 36s)\n",
+      "\n",
+      "[+] Tentative avec BionicFlyingFox...\n",
+      "    -> chemin trouvé mais trop lent: 40.345s (> 36s)\n",
+      "\n",
+      "==============================\n",
+      "MEILLEURE SOLUTION VALIDE\n",
+      "==============================\n",
+      "Agent : BionicOpter\n",
+      "Temps total : 35.702s\n",
+      "Chemin combiné (A+B+C) :\n",
+      "SSEEESSSSESEEESSSSEEEEENENENNEESSSSEEESSSESSESEEE\n",
+      "\n",
+      "--- Segments ---\n",
+      "Map A: SSEEESSSSESEEE\n",
+      "Map B: SSSSEEEEENENENNEESSSS\n",
+      "Map C: EEESSSESSESEEE\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "\n",
+    "\n",
     "solutions = []\n",
     "for agent in agents:\n",
     "    print(f\"\\n[+] Tentative avec {agent['name']}...\")\n",
@@ -487,7 +498,7 @@
     "valid = [s for s in solutions if s[\"temps_ms\"] <= overall_limit_ms]\n",
     "if not valid:\n",
     "    print(\"\\n[-] Aucune solution ne respecte la limite globale. (Bizarre… vérifie les règles / JSON)\")\n",
-    "    return\n",
+    "    sys.exit(1)\n",
     "\n",
     "best = min(valid, key=lambda s: s[\"temps_ms\"])\n",
     "\n",
@@ -495,9 +506,9 @@
     "print(\"MEILLEURE SOLUTION VALIDE\")\n",
     "print(\"==============================\")\n",
     "print(\"Agent :\", best[\"agent\"])\n",
-    "print(f\"Temps total : {best['total_s']:.3f}s\")\n",
+    "print(f\"Temps total : {best['temps_ms'] / 1000:.3f}s\")\n",
     "print(\"Chemin combiné (A+B+C) :\")\n",
-    "print(best[\"path\"])\n",
+    "print(best[\"chemin\"])\n",
     "\n",
     "# Si tu veux aussi les segments :\n",
     "print(\"\\n--- Segments ---\")\n",
