--- a/src/2001-2025 Age of Connectivity/up-in-the-clouds.ipynb
+++ b/src/2001-2025 Age of Connectivity/up-in-the-clouds.ipynb
@@ -10,310 +10,30 @@
     "### Règles\n",
     "\n",
     "- **1 job par serveur, 1 serveur par job** (matching bipartite parfait)\n",
-    "- **Serveur valide** si : \n",
+    "- **Serveur valide** si toutes les conditions sont respectées :\n",
     "  - `cpu_s >= cpu_j`\n",
     "  - `ram_s >= ram_j`\n",
     "  - `disk_s >= disk_j`\n",
-    "- **Coût** = `runtime_j × cpu_j × server_cost`\n",
+    "- **Coût d'allocation** = `runtime_j × cpu_j × server_cost`\n",
     "\n",
-    "### Sortie\n",
+    "### Objectif\n",
     "\n",
-    "- Coût total **minimal**\n",
+    "Trouver le **coût total minimal** pour allouer tous les jobs aux serveurs.\n",
     "\n",
-    "### Approche\n",
+    "### Approche algorithmique\n",
     "\n",
-    "1. Construire un **graphe réduit** : pour chaque job, garder les **K serveurs valides les moins chers** (basé sur `server_cost`)\n",
-    "2. Appliquer **Min-Cost Max-Flow** sur ce graphe réduit\n",
-    "3. Si échec (pas de matching complet) → augmenter **K** (essai/erreur itératif)\n",
+    "Utiliser **Min-Cost Max-Flow** (OR-Tools) sur un graphe bipartite :\n",
     "\n",
-    "### Stratégie d'optimisation\n",
+    "1. **Construction du graphe** :\n",
+    "   - Nœuds gauche : n jobs (supply = +1 chacun)\n",
+    "   - Nœuds droits : n serveurs (supply = -1 chacun)\n",
+    "   - Arcs job → serveur si le serveur est valide (capacité = 1)\n",
+    "   - Coût de l'arc = `cpu_j × runtime_j × server_cost`\n",
     "\n",
-    "- Commencer avec **K petit** (ex. K = 3) pour réduire la complexité\n",
-    "- Si pas de solution, augmenter progressivement jusqu'à trouver un matching valide\n",
-    "- Garantit une solution optimale ou proche-optimale en temps polynomial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "39b65df6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import annotations\n",
-    "import math\n",
-    "import re\n",
-    "import heapq\n",
-    "from pathlib import Path\n",
-    "from dataclasses import dataclass\n",
-    "from typing import List, Tuple, Optional"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bec3bb3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NUM_RE = re.compile(r\"\\(([^)]+)\\)\")\n",
-    "\n",
-    "def parse_line_tuple(line: str) -> Tuple[float, float, float, float]:\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Extrait le tuple (a,b,c,d) d'une ligne type:\n",
-    "      \"job0: (10, 11, 1.23, 0.68)\"\n",
-    "    \"\"\"\n",
-    "    m = NUM_RE.search(line)\n",
-    "    if not m:\n",
-    "        raise ValueError(f\"Ligne invalide: {line!r}\")\n",
-    "    parts = [p.strip() for p in m.group(1).split(\",\")]\n",
-    "    if len(parts) != 4:\n",
-    "        raise ValueError(f\"Tuple inattendu (4 valeurs attendues): {line!r}\")\n",
-    "    return tuple(float(x) for x in parts)  # (cpu, ram, disk, runtime) ou (cpu, ram, disk, cost)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5eaafb49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_jobs(path: str) -> List[Tuple[int, int, float, float]]:\n",
-    "    lines = Path(path).read_text(encoding=\"utf-8\").strip().splitlines()\n",
-    "    jobs = []\n",
-    "    for ln in lines:\n",
-    "        cpu, ram, disk, runtime = parse_line_tuple(ln)\n",
-    "        jobs.append((int(cpu), int(ram), float(disk), float(runtime)))\n",
-    "    return jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "31cf6b5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_servers(path: str) -> List[Tuple[int, int, float, float]]:\n",
-    "    lines = Path(path).read_text(encoding=\"utf-8\").strip().splitlines()\n",
-    "    servers = []\n",
-    "    for ln in lines:\n",
-    "        cpu, ram, disk, cost = parse_line_tuple(ln)\n",
-    "        servers.append((int(cpu), int(ram), float(disk), float(cost)))\n",
-    "    return servers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6ef793ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class Edge:\n",
-    "    to: int\n",
-    "    rev: int\n",
-    "    cap: int\n",
-    "    cost: float\n",
-    "\n",
-    "class MinCostMaxFlow:\n",
-    "    def __init__(self, n: int):\n",
-    "        self.n = n\n",
-    "        self.g: List[List[Edge]] = [[] for _ in range(n)]\n",
-    "\n",
-    "    def add_edge(self, fr: int, to: int, cap: int, cost: float) -> None:\n",
-    "        fwd = Edge(to=to, rev=len(self.g[to]), cap=cap, cost=cost)\n",
-    "        rev = Edge(to=fr, rev=len(self.g[fr]), cap=0, cost=-cost)\n",
-    "        self.g[fr].append(fwd)\n",
-    "        self.g[to].append(rev)\n",
-    "\n",
-    "    def min_cost_flow(self, s: int, t: int, maxf: int) -> Tuple[int, float]:\n",
-    "        n = self.n\n",
-    "        inf = 10**30\n",
-    "        flow = 0\n",
-    "        cost = 0.0\n",
-    "        potential = [0.0] * n  # Johnson\n",
-    "        prevv = [0] * n\n",
-    "        preve = [0] * n\n",
-    "\n",
-    "        while flow < maxf:\n",
-    "            dist = [inf] * n\n",
-    "            dist[s] = 0.0\n",
-    "            pq = [(0.0, s)]\n",
-    "\n",
-    "            while pq:\n",
-    "                d, v = heapq.heappop(pq)\n",
-    "                if d != dist[v]:\n",
-    "                    continue\n",
-    "                for i, e in enumerate(self.g[v]):\n",
-    "                    if e.cap <= 0:\n",
-    "                        continue\n",
-    "                    nd = d + e.cost + potential[v] - potential[e.to]\n",
-    "                    if nd < dist[e.to] - 1e-12:\n",
-    "                        dist[e.to] = nd\n",
-    "                        prevv[e.to] = v\n",
-    "                        preve[e.to] = i\n",
-    "                        heapq.heappush(pq, (nd, e.to))\n",
-    "\n",
-    "            if dist[t] >= inf / 2:\n",
-    "                # Impossible d'augmenter -> pas de flot complet\n",
-    "                break\n",
-    "\n",
-    "            for v in range(n):\n",
-    "                if dist[v] < inf / 2:\n",
-    "                    potential[v] += dist[v]\n",
-    "\n",
-    "            addf = maxf - flow\n",
-    "            v = t\n",
-    "            while v != s:\n",
-    "                e = self.g[prevv[v]][preve[v]]\n",
-    "                addf = min(addf, e.cap)\n",
-    "                v = prevv[v]\n",
-    "\n",
-    "            v = t\n",
-    "            while v != s:\n",
-    "                e = self.g[prevv[v]][preve[v]]\n",
-    "                e.cap -= addf\n",
-    "                self.g[v][e.rev].cap += addf\n",
-    "                v = prevv[v]\n",
-    "\n",
-    "            flow += addf\n",
-    "            cost += addf * potential[t]\n",
-    "\n",
-    "        return flow, cost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "65979d35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_feasible(job, srv) -> bool:\n",
-    "    cpu_j, ram_j, disk_j, runtime_j = job\n",
-    "    cpu_s, ram_s, disk_s, cost_s = srv\n",
-    "    return (cpu_s >= cpu_j) and (ram_s >= ram_j) and (disk_s + 1e-12 >= disk_j)\n",
-    "\n",
-    "def solve_with_k(jobs, servers, k: int) -> Optional[float]:\n",
-    "    \"\"\"\n",
-    "    Garde pour chaque job les k serveurs valides les moins chers (server_cost),\n",
-    "    puis min-cost flow. Renvoie le coût total si matching complet, sinon None.\n",
-    "    \"\"\"\n",
-    "    n = len(jobs)\n",
-    "    assert n == len(servers), \"On attend 1000 jobs et 1000 serveurs.\"\n",
-    "\n",
-    "    # Petit \"truc humain\" : je trie les serveurs par coût unitaire (server_cost)\n",
-    "    # comme ça, pour chaque job je peux prendre les k premiers valides.\n",
-    "    servers_sorted = sorted(list(enumerate(servers)), key=lambda x: x[1][3])  # (idx, srv), tri par cost_s\n",
-    "\n",
-    "    # Nœuds:\n",
-    "    # source = 0\n",
-    "    # jobs   = 1..n\n",
-    "    # serv   = 1+n .. 1+2n\n",
-    "    # sink   = 1+2n\n",
-    "    SRC = 0\n",
-    "    JOB0 = 1\n",
-    "    SER0 = 1 + n\n",
-    "    SNK = 1 + 2*n\n",
-    "    mcmf = MinCostMaxFlow(SNK + 1)\n",
-    "\n",
-    "    # source -> jobs\n",
-    "    for j in range(n):\n",
-    "        mcmf.add_edge(SRC, JOB0 + j, cap=1, cost=0.0)\n",
-    "\n",
-    "    # serveurs -> sink\n",
-    "    for s in range(n):\n",
-    "        mcmf.add_edge(SER0 + s, SNK, cap=1, cost=0.0)\n",
-    "\n",
-    "    # jobs -> serveurs (arêtes réduites)\n",
-    "    for j in range(n):\n",
-    "        cpu_j, ram_j, disk_j, runtime_j = jobs[j]\n",
-    "        a_j = float(cpu_j) * float(runtime_j)  # facteur du job\n",
-    "\n",
-    "        picked = 0\n",
-    "        for s_idx, srv in servers_sorted:\n",
-    "            if is_feasible(jobs[j], srv):\n",
-    "                cost_s = srv[3]\n",
-    "                # coût(job->srv) = a_j * cost_s\n",
-    "                mcmf.add_edge(JOB0 + j, SER0 + s_idx, cap=1, cost=a_j * cost_s)\n",
-    "                picked += 1\n",
-    "                if picked >= k:\n",
-    "                    break\n",
-    "\n",
-    "        if picked == 0:\n",
-    "            # aucun serveur valide pour ce job => impossible direct\n",
-    "            return None\n",
-    "\n",
-    "    flow, min_cost = mcmf.min_cost_flow(SRC, SNK, maxf=n)\n",
-    "    if flow < n:\n",
-    "        return None\n",
-    "    return min_cost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "00ed3a93",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[+] Tentative avec K=10 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=20 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=40 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=80 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=150 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=300 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=600 serveurs candidats / job...\n",
-      "    -> échec : pas de matching complet avec ce K.\n",
-      "\n",
-      "[+] Tentative avec K=1000 serveurs candidats / job...\n",
-      "    -> OK ! coût minimal trouvé: 3575.64\n",
-      "\n",
-      "=== RÉPONSE (un seul nombre) ===\n",
-      "3575.64\n"
-     ]
-    }
-   ],
-   "source": [
-    "jobs_path = \"res/jobs.txt\"\n",
-    "servers_path = \"res/server.txt\"\n",
-    "\n",
-    "jobs = load_jobs(jobs_path)\n",
-    "servers = load_servers(servers_path)\n",
-    "\n",
-    "# Essai/erreur “raisonnable”\n",
-    "# (si ça échoue, on élargit progressivement le graphe)\n",
-    "for k in [10, 20, 40, 80, 150, 300, 600, 1000]:\n",
-    "    print(f\"\\n[+] Tentative avec K={k} serveurs candidats / job...\")\n",
-    "    res = solve_with_k(jobs, servers, k=k)\n",
-    "    if res is None:\n",
-    "        print(\"    -> échec : pas de matching complet avec ce K.\")\n",
-    "        continue\n",
-    "    total = round(res + 1e-9, 2)\n",
-    "    print(f\"    -> OK ! coût minimal trouvé: {total:.2f}\")\n",
-    "    print(\"\\n=== RÉPONSE (un seul nombre) ===\")\n",
-    "    print(f\"{total:.2f}\")\n",
-    "    break"
+    "2. **Résolution** :\n",
+    "   - Appliquer l'algorithme Min-Cost Max-Flow\n",
+    "   - Scaling des coûts (×10 000) pour garder la précision avec entiers\n",
+    "   - Récupérer le coût optimal et rescaler"
    ]
   },
   {
@@ -321,8 +41,99 @@
    "execution_count": null,
    "id": "cfc2f35f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3575.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from pathlib import Path\n",
+    "from ortools.graph.python import min_cost_flow\n",
+    "\n",
+    "NUM_RE = re.compile(r\"\\(([^)]+)\\)\")\n",
+    "\n",
+    "def parse_line_tuple(line: str):\n",
+    "    m = NUM_RE.search(line)\n",
+    "    if not m:\n",
+    "        raise ValueError(f\"Ligne invalide: {line!r}\")\n",
+    "    parts = [p.strip() for p in m.group(1).split(\",\")]\n",
+    "    if len(parts) != 4:\n",
+    "        raise ValueError(f\"Tuple invalide: {line!r}\")\n",
+    "    return tuple(float(x) for x in parts)\n",
+    "\n",
+    "def load_jobs(path: str):\n",
+    "    jobs = []\n",
+    "    for ln in Path(path).read_text(encoding=\"utf-8\").strip().splitlines():\n",
+    "        cpu, ram, disk, runtime = parse_line_tuple(ln)\n",
+    "        jobs.append((int(cpu), int(ram), float(disk), float(runtime)))\n",
+    "    return jobs\n",
+    "\n",
+    "def load_servers(path: str):\n",
+    "    servers = []\n",
+    "    for ln in Path(path).read_text(encoding=\"utf-8\").strip().splitlines():\n",
+    "        cpu, ram, disk, cost = parse_line_tuple(ln)\n",
+    "        servers.append((int(cpu), int(ram), float(disk), float(cost)))\n",
+    "    return servers\n",
+    "\n",
+    "def feasible(job, srv):\n",
+    "    cpu_j, ram_j, disk_j, _ = job\n",
+    "    cpu_s, ram_s, disk_s, _ = srv\n",
+    "    return (cpu_s >= cpu_j) and (ram_s >= ram_j) and (disk_s + 1e-12 >= disk_j)\n",
+    "\n",
+    "def main():\n",
+    "    jobs = load_jobs(\"res/jobs.txt\")\n",
+    "    servers = load_servers(\"res/server.txt\")\n",
+    "    n = len(jobs)\n",
+    "    assert n == len(servers)\n",
+    "\n",
+    "    SCALE = 10_000\n",
+    "\n",
+    "    # Nœuds:\n",
+    "    # 0..n-1   = jobs\n",
+    "    # n..2n-1  = servers\n",
+    "    # on crée un flot de 1 par job, demande = +1 ; chaque serveur demande = -1\n",
+    "    mcf = min_cost_flow.SimpleMinCostFlow()\n",
+    "\n",
+    "    # supplies\n",
+    "    supplies = [0] * (2 * n)\n",
+    "    for j in range(n):\n",
+    "        supplies[j] = 1\n",
+    "    for s in range(n):\n",
+    "        supplies[n + s] = -1\n",
+    "\n",
+    "    # Arcs jobs -> servers si feasible\n",
+    "    arc_count = 0\n",
+    "    for j in range(n):\n",
+    "        cpu_j, ram_j, disk_j, runtime_j = jobs[j]\n",
+    "        a = cpu_j * runtime_j  # facteur du job\n",
+    "        for s in range(n):\n",
+    "            srv = servers[s]\n",
+    "            if feasible(jobs[j], srv):\n",
+    "                cost_s = srv[3]\n",
+    "                cost = int(round(a * cost_s * SCALE))\n",
+    "                mcf.add_arc_with_capacity_and_unit_cost(j, n + s, 1, cost)\n",
+    "                arc_count += 1\n",
+    "\n",
+    "    # Ajout supplies\n",
+    "    for node, sup in enumerate(supplies):\n",
+    "        mcf.set_node_supply(node, sup)\n",
+    "\n",
+    "    status = mcf.solve()\n",
+    "    if status != mcf.OPTIMAL:\n",
+    "        raise RuntimeError(f\"Pas de solution optimale. Statut OR-Tools={status}\")\n",
+    "\n",
+    "    total_scaled = mcf.optimal_cost()  # somme des coûts entiers (scaled)\n",
+    "    total = total_scaled / SCALE\n",
+    "    print(f\"{total:.2f}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
